# SystemCTemplate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  conanfile.py  pyproject.toml
cmake/: GCC_LINUX_Toolchain.cmake  LTO.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/functional_tests/: CMakeLists.txt  funtional_test1.cpp
tests/unit_tests/: CMakeLists.txt  UT_Test1.cpp
