[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Ahmed Salim <ahmedslim12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
conan = "^2.0.17"
gcovr = "^7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
